force-app/zurich-base/main/default/objects/OrderItem/OrderItem.object-meta.xml
<CustomObject>
</CustomObject>