force-app/zurich-base/main/default/objects/OrderItem/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies if the product is active in the policy</description>
    <inlineHelpText>Specifies if the product is active in the policy</inlineHelpText>
    <label>Activo</label>
    <type>Checkbox</type>
</CustomField>