force-app/zurich-base/main/default/objects/OrderItem/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Marca</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Nintendo</fullName>
            </value>
            <value>
                <fullName>Micro</fullName>
            </value>
            <value>
                <fullName>Raycool</fullName>
            </value>
            <value>
                <fullName>BQ</fullName>
            </value>
            <value>
                <fullName>Moma Bikes</fullName>
            </value>
            <value>
                <fullName>Urban Fox</fullName>
            </value>
            <value>
                <fullName>Sony</fullName>
            </value>
            <value>
                <fullName>E-Twow</fullName>
            </value>
            <value>
                <fullName>LG</fullName>
            </value>
            <value>
                <fullName>Nilox</fullName>
            </value>
            <value>
                <fullName>Huawei</fullName>
            </value>
            <value>
                <fullName>Microsoft</fullName>
            </value>
            <value>
                <fullName>Asus</fullName>
            </value>
            <value>
                <fullName>Segway</fullName>
            </value>
            <value>
                <fullName>Apple</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Samsung</fullName>
            </value>
            <value>
                <fullName>Lenovo</fullName>
            </value>
            <value>
                <fullName>MSI</fullName>
            </value>
            <value>
                <fullName>Xiaomi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>