force-app/zurich-base/main/default/objects/OrderItem/fields/Categoria_UTM__c.field-meta.xml
<CustomField>
    <fullName>Categoria_UTM__c</fullName>
    <formula>IF(
	(
		ISBLANK(TEXT(Order.Bundle__c))
		||
		TEXT(Order.Bundle__c) == &quot;No bundle&quot;
	),
	CASE
	(
		TEXT(Category__c),
		&quot;Laptop&quot;, &quot;ordenadores&quot;,
		&quot;Smartphone&quot;,&quot;moviles&quot;,
		&quot;Tablet&quot;,&quot;tablets&quot;,
		&quot;Smartwatch&quot;,&quot;smartwatches&quot;,
		&quot;GoPro&quot;,&quot;camaras&quot;,
		&quot;Electric Scooter&quot;,&quot;patinetes&quot;,
		&quot;Airpods&quot;,&quot;auriculares&quot;,
		&quot;Game Console&quot;,&quot;consolas&quot;,
		&quot;ELECTRIC BIKE&quot;,&quot;bicicletas&quot;,
		&quot;moviles&quot;
	),
	&quot;packs&quot;
)</formula>
    <label>Categoria UTM</label>
    <type>Text</type>
</CustomField>