force-app/zurich-base/main/default/objects/OrderItem/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Categoría</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Laptop</fullName>
            </value>
            <value>
                <fullName>Tablet</fullName>
            </value>
            <value>
                <fullName>Game Console</fullName>
            </value>
            <value>
                <fullName>Smartphone</fullName>
            </value>
            <value>
                <fullName>GoPro</fullName>
            </value>
            <value>
                <fullName>ELECTRIC BIKE</fullName>
            </value>
            <value>
                <fullName>Electric Scooter</fullName>
            </value>
            <value>
                <fullName>Smartwatch</fullName>
            </value>
            <value>
                <fullName>Insured Person</fullName>
            </value>
            <value>
                <fullName>Airpods</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>