force-app/zurich-base/main/default/objects/OrderItem/fields/DateListed__c.field-meta.xml
<CustomField>
    <fullName>DateListed__c</fullName>
    <description>Klinc</description>
    <label>Date listed</label>
    <type>Date</type>
</CustomField>