force-app/zurich-base/main/default/objects/OrderItem/fields/DaysOfTravel__c.field-meta.xml
<CustomField>
    <fullName>DaysOfTravel__c</fullName>
    <description>KLINC: Indica el número de días de viaje del objeto Multiproduct</description>
    <label>Days of Travel</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>