force-app/zurich-base/main/default/objects/OrderItem/fields/DepartureDate__c.field-meta.xml
<CustomField>
    <fullName>DepartureDate__c</fullName>
    <description>KLINC: Indica la fecha de salida del objeto Multiproduct</description>
    <label>Departure Date</label>
    <type>Date</type>
</CustomField>