force-app/zurich-base/main/default/objects/OrderItem/fields/HomeApplieanceType__c.field-meta.xml
<CustomField>
    <fullName>HomeApplieanceType__c</fullName>
    <label>Home Applieance type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>