force-app/zurich-base/main/default/objects/OrderItem/fields/IMEIDocumentation__c.field-meta.xml
<CustomField>
    <fullName>IMEIDocumentation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IMEI documentación</label>
    <type>Checkbox</type>
</CustomField>