force-app/zurich-base/main/default/objects/OrderItem/fields/ItemAge__c.field-meta.xml
<CustomField>
    <fullName>ItemAge__c</fullName>
    <description>Product age in months</description>
    <inlineHelpText>Product age in months</inlineHelpText>
    <label>Antigüedad</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>