force-app/zurich-base/main/default/objects/OrderItem/fields/ItemBrandText__c.field-meta.xml
<CustomField>
    <fullName>ItemBrandText__c</fullName>
    <description>Klinc</description>
    <label>Item brand text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>