force-app/zurich-base/main/default/objects/OrderItem/fields/ItemId__c.field-meta.xml
<CustomField>
    <fullName>ItemId__c</fullName>
    <description>Unique identifier or an insured product</description>
    <externalId>true</externalId>
    <label>Item Id</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>