force-app/zurich-base/main/default/objects/OrderItem/fields/itemModel__c.field-meta.xml
<CustomField>
    <fullName>itemModel__c</fullName>
    <label>Modelo</label>
    <length>80</length>
    <type>Text</type>
</CustomField>