force-app/zurich-base/main/default/objects/OrderItem/fields/ItemStatus__c.field-meta.xml
<CustomField>
    <fullName>ItemStatus__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>System has turned object on</fullName>
            </value>
            <value>
                <fullName>Object is on</fullName>
            </value>
            <value>
                <fullName>Object is off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>