force-app/zurich-base/main/default/objects/OrderItem/fields/MarketValue__c.field-meta.xml
<CustomField>
    <fullName>MarketValue__c</fullName>
    <label>Market value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>