force-app/zurich-base/main/default/objects/OrderItem/fields/MultimediaType__c.field-meta.xml
<CustomField>
    <fullName>MultimediaType__c</fullName>
    <description>Klinc</description>
    <label>Multimedia type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>