force-app/zurich-base/main/default/objects/OrderItem/fields/NumberOfInsured__c.field-meta.xml
<CustomField>
    <fullName>NumberOfInsured__c</fullName>
    <description>KLINC: Indica el número de asegurados de Multiproduct</description>
    <label>Number Of Insured</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>