force-app/zurich-base/main/default/objects/OrderItem/fields/PurchaseDate__c.field-meta.xml
<CustomField>
    <fullName>PurchaseDate__c</fullName>
    <description>KLINC: Indica la fecha de compra</description>
    <label>Purchase Date</label>
    <type>Date</type>
</CustomField>