force-app/zurich-base/main/default/objects/OrderItem/fields/RangePriceMax__c.field-meta.xml
<CustomField>
    <fullName>RangePriceMax__c</fullName>
    <label>Range - Price Max.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>