force-app/zurich-base/main/default/objects/OrderItem/fields/RangePriceMin__c.field-meta.xml
<CustomField>
    <fullName>RangePriceMin__c</fullName>
    <label>Range - Price Min.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>