force-app/zurich-base/main/default/objects/OrderItem/fields/ReturnDate__c.field-meta.xml
<CustomField>
    <fullName>ReturnDate__c</fullName>
    <description>KLINC: Indica la fecha de regreso del objeto Multiproduct</description>
    <label>Return Date</label>
    <type>Date</type>
</CustomField>