force-app/zurich-base/main/default/objects/OrderItem/fields/Subcategory__c.field-meta.xml
<CustomField>
    <fullName>Subcategory__c</fullName>
    <description>KLINC. Subcategoría asociada al producto</description>
    <label>Subcategoría</label>
    <length>255</length>
    <type>Text</type>
</CustomField>