force-app/zurich-base/main/default/objects/OrderItem/fields/TicketDocumentation__c.field-meta.xml
<CustomField>
    <fullName>TicketDocumentation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ticket documentación</label>
    <type>Checkbox</type>
</CustomField>