force-app/zurich-base/main/default/objects/OrderItem/fields/Updated__c.field-meta.xml
<CustomField>
    <fullName>Updated__c</fullName>
    <description>Field to determine if the object is updated. In case processing time is different from Order, it will be deleted</description>
    <formula>(Processing_Timestamp__c ==  Order.Processing_Timestamp__c)  ||  (Processing_Timestamp__c !=  Order.Processing_Timestamp__c &amp;&amp;  Active__c== false) || ( ISBLANK(Processing_Timestamp__c) &amp;&amp;  ISBLANK(Order.Processing_Timestamp__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Updated</label>
    <type>Checkbox</type>
</CustomField>